--- a/package.json
+++ b/package.json
@@ -1,21 +1,46 @@
 {
-  "name": "cheersapp",
+  "name": "cheers",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "ios": "expo start --ios"
   },
   "dependencies": {
+    "@expo-google-fonts/dev": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "apisauce": "^3.0.1",
     "expo": "~49.0.15",
+    "expo-apple-authentication": "~6.1.0",
+    "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-image": "~1.3.5",
+    "expo-image-picker": "~14.3.2",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.6.0",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-circular-progress": "^1.3.9",
+    "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-modalize": "^2.1.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.2",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.23.5"
   },
   "private": true
 }
